fixes case-study scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,16 +102,37 @@ figcaption {
   float: left;
   /* transform: translateY(32.5%); */
   box-sizing: border-box;
-  padding: 20px 40px;
+  padding: 0px 40px;
   position: fixed;
+  /* overflow-y: hidd; */
   font-size: 1rem;
   z-index: 1;
+  transition: top 0.6s;
+  top: 100px;
+  /* bottom: 0; */
+  height: 100vh;
 }
 
 #sidebar ul {
   list-style: none;
   padding-left: 0;
   line-height: 1.4;
+  margin-top: 0;
+  /* display: flex;
+  flex-flow: column;
+  height: 100%; */
+  height: 100vh;
+  overflow-y: scroll;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+  /* padding-right: 17px;  */
+  /* Increase/decrease this value for cross-browser compatibility  box-sizing: content-box; So the width will be 100% + 17px */
+  /* box-sizing: content-box; */
+}
+
+#sidebar ul::-webkit-scrollbar {
+  display: none;
 }
 
 #sidebar ul li {
@@ -850,6 +871,7 @@ a:hover {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  overflow-x: hidden;
 }
 .section.second-banner {
   padding-top: 0;
@@ -1434,6 +1456,10 @@ a:hover {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  /* width: 100%;
+  position: fixed;
+  top: 0; */
+  transition: top 0.3s;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
